qr mission css fixes - direction for english and redundant whitespace

--- a/www/css/english.css
+++ b/www/css/english.css
@@ -30,3 +30,7 @@
 .playAgain {
   background-image: url(../img/play_english.png);
 }
+
+.english .scan-wrap {
+  direction: ltr;
+}
