--- a/www/css/qrCode.css
+++ b/www/css/qrCode.css
@@ -19,8 +19,6 @@
 }
 
 .data-text .popupText {
-       white-space: initial;
-    padding: 10px;
     overflow-y: auto;
     height: 100%;
     font-size: 20px;
